--- a/2030.html
+++ b/2030.html
@@ -71,7 +71,7 @@
         <div
           class="fullscreen background-cover background-center o-100"
           style="background-image: url('https://cdn.pixabay.com/photo/2016/10/20/18/35/earth-1756274_1280.jpg')"></div>
-        <div class="fullscreen o-40" style="background: rgb(0,10,30);
+        <div class="fullscreen o-50" style="background: rgb(0,10,30);
   background: linear-gradient(0deg, rgba(0,10,30,0) 10%, rgba(0,10,30,1) 90%);"></div>
         <div class="bring-forward page-constrained height-max-content">
           <h1 class="display-3">We want to see everyone everywhere in an everyday relationship with Jesus &mdash; and yes, that means we’ve got some work to do.</h1>
@@ -84,10 +84,10 @@
       <section id="debt" class="bg-white">
         <div class="text-constrained mx-auto text-center">
           <i class="hidden fa-solid fa-circle-check fa-3x mb-3 text-primary bg-white rounded-full"></i>
-          <p class="pretitle text-primary" data-aos="fade-up"><i class="fa-solid fa-circle-check"></i> Completed 2023</p>
           <h2 class="h1">Be Debt Free</h2>
+          <p class="pretitle text-primary" data-aos="fade-up"><i class="fa-solid fa-circle-check"></i> Completed 2023</p>
 
-          <p class="lead text-primary">We dreamed of being debt-free since January 2017 &mdash; when we started the year with a $45 million debt balance largely due to facility-building projects.</p>
+          <p class="lead">We dreamed of being debt-free since January 2017 &mdash; when we started the year with a $45 million debt balance largely due to facility-building projects.</p>
 
           <p>In 2017, NewSpring’s leadership team made two important decisions: we won’t take on any additional debt, and we will give 10% of our general tithes and offerings to other Christ-centered churches and mission organizations.</p>
 
@@ -101,7 +101,7 @@
         <div class="text-constrained mx-auto px-4 px-sm-7 px-md-0">
           <div class="text-center">
             <h2 class="h1">Plant Ten New Churches</h2>
-            <p class="lead text-primary">We will identify, train, and send out people we believe have been called by God and are ready to start a new church — not a NewSpring campus.</p>
+            <p class="lead">We will identify, train, and send out people we believe have been called by God and are ready to start a new church — not a NewSpring campus.</p>
             <p>We believe these new churches will be planted outside the state of South Carolina. We also strongly believe God will raise up other people in our church who will feel called to go and be a part of these church plants!</p>
           </div>
         </div>
@@ -183,7 +183,7 @@
           <div class="text-center">
             <h2 class="h1">All NewSpring Campuses in Permanent Homes</h2>
           
-            <p class="lead text-primary">Out of our 14 locations across the state, our <a href="/locations/aiken">Aiken</a>, <a href="/locations/charleston">Charleston</a>, <a href="/locations/lake-wylie">Lake Wylie</a>, and <a href="/locations/myrtle-beach">Myrtle Beach</a> campuses are still leasing their facilities.</p>
+            <p class="lead">Out of our 14 locations across the state, our <a href="/locations/aiken">Aiken</a>, <a href="/locations/charleston">Charleston</a>, <a href="/locations/lake-wylie">Lake Wylie</a>, and <a href="/locations/myrtle-beach">Myrtle Beach</a> campuses are still leasing their facilities.</p>
             <p>We’d love to see each of these campuses established in their permanent facility by 2030!</p>
           </div>
         </div>
@@ -258,7 +258,7 @@
 
       <section id="questions" class="text-center">
         <div class="text-constrained mx-auto">
-          <h2>Have Questions?</h2>
+          <h2>Have questions?</h2>
           <p>We’d love to answer any questions you might have.</p>
           <p class="mb-0"><a href="/workflows/152" class="btn btn-primary">Contact Us</a></p>
         </div>
