--- a/giving.html
+++ b/giving.html
@@ -33,6 +33,7 @@
 
     <link rel="stylesheet" href="./Themes/new/Styles/bootstrap.css" />
     <link rel="stylesheet" href="./Themes/new/Styles/theme.css" />
+    <link rel="stylesheet" href="./Themes/new/Styles/gauntlet.css" />
   </head>
   <body>
     <section class="p-0 w-100 bg-white d-grid grid-cols-2 justify-content-between align-content-center drop-shadow">
