moved why we give link to copy link instead of button

--- a/2030.html
+++ b/2030.html
@@ -194,8 +194,8 @@
 
           <p class="d-flex justify-content-center flex-column flex-sm-row gap-y-1 gap-x-1 gap-y-sm-0">
             <a href="/give/now" target="_blank" class="btn btn-primary">Give Now</a>
-            <a href="/give" target="_blank" class="btn btn-default">Why We Give</a>
           </p>
+          <p>Learn more about <a href="/give">why we give.</a></p>
         </div>
 
         <div class="text-center mt-6 mt-md-7">
