added bg gradient to church planting section

--- a/2030.html
+++ b/2030.html
@@ -99,16 +99,20 @@
         </div>
       </section>
 
-      <section id="church-planting" class="bg-gray-darker text-white px-0">
+      <section id="church-planting" class="bg-gray-darker text-white px-0" style="background: rgb(75,51,64);
+      background: linear-gradient(321deg, rgba(75,51,64,1) 0%, rgba(141,78,70,1) 100%);">
         <div class="text-constrained mx-auto px-4 px-sm-7 px-md-0">
           <div class="text-center">
             <h2 class="h1">Plant Ten New Churches</h2>
-            <p class="lead">We will identify, train, and send out people we believe have been called by God and are ready to start a new church — not a NewSpring campus.</p>
+            <p class="lead text-white o-50">We will identify, train, and send out people we believe have been called by God and are ready to start a new church — not a NewSpring campus.</p>
             <p>We believe these new churches will be planted outside the state of South Carolina. We also strongly believe God will raise up other people in our church who will feel called to go and be a part of these church plants.</p>
 
-            <div class="bg-gray-dark text-white p-5 my-6 my-md-7 py-md-6 rounded-xl" data-aos="fade-up">
-              <p class="lead text-white">Is God calling you to plant or be part of planting a church?</p>
-              <p class="mb-0"><a href="#" class="btn btn-primary">Connect With Us</a></p>
+            <div class="overflow-hidden text-white p-5 my-6 my-md-7 py-md-6 rounded-xl" data-aos="fade-up">
+              <div class="fullscreen bg-black o-20"></div>
+              <div class="bring-forward">
+                <p class="lead text-white">Is God calling you to plant or be part of planting a church?</p>
+                <p class="mb-0"><a href="#" class="btn btn-primary">Connect With Us</a></p>
+              </div>
             </div>
           </div>
         </div>
