--- a/2030.html
+++ b/2030.html
@@ -89,7 +89,7 @@
 
           <p class="lead mb-0">We dreamed of being debt-free since January 2017 &mdash; when we started the year with a $45 million debt balance largely due to facility-building projects.</p>
 
-          <script src="https://fast.wistia.com/embed/medias/72p22x1545.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding my-6 rounded-xl overflow-hidden" data-aos="fade-up" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_72p22x1545 popover=true popoverAnimateThumbnail=false videoFoam=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
+          <script src="https://fast.wistia.com/embed/medias/skqxx3cwhf.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding my-6 rounded-xl overflow-hidden" data-aos="fade-up" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_skqxx3cwhf popover=true popoverAnimateThumbnail=false videoFoam=true playerColor=6bac43" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
 
           <p>In 2017, NewSpring’s leadership team made two important decisions: we won’t take on any additional debt, and we will give 10% of our general tithes and offerings to other Christ-centered churches and mission organizations.</p>
 
