removed fixed background from 2030 page

--- a/2030.html
+++ b/2030.html
@@ -90,7 +90,7 @@
 
       <section class="text-white position-relative d-flex justify-content-center align-content-center flex-wrap text-center px-md-9 vh-100" style="background-color: rgb(180,90,80);">
         <div
-          class="fullscreen background-cover background-center background-fixed o-70"
+          class="fullscreen background-cover background-center o-70"
           style="background-image: url('https://images.unsplash.com/photo-1546874177-9e664107314e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2369&q=100')"></div>
         <div class="fullscreen o-90" style="background: rgb(0,0,0);
   background: linear-gradient(180deg, rgba(0,0,0,0) 20%, rgba(0,0,0,1) 80%);"></div>
