--- a/about.html
+++ b/about.html
@@ -40,32 +40,32 @@
   <body>
     <section class="p-0 w-100 bg-white d-grid grid-cols-2 justify-content-between align-content-center drop-shadow">
       <div class="d-grid align-content-center">
-        <a href="/" class="px-3 mb-0">
+        <a href="/" class="px-4 mb-0">
           <img src="./Themes/new/Assets/SVG/logo.svg" alt="NewSpring Church Logo" style="width: 160px; max-width: 160px" />
         </a>
       </div>
       <div class="overflow-hidden text-right">
-        <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-lighter">
+        <a href="#" class="d-inline-block no-underline p-4 text-gray-darker border-solid border-l border-gray-lighter">
           <i class="fa-light fa-lg fa-bars"></i>
         </a>
 
         <span class="hidden-xs hidden-sm">
-          <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-lighter">
+          <a href="#" class="d-inline-block no-underline p-4 text-gray-darker border-solid border-l border-gray-lighter">
             <i class="fa-light fa-lg fa-location-dot"></i>
           </a>
 
-          <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-lighter">
+          <a href="#" class="d-inline-block no-underline p-4 text-gray-darker border-solid border-l border-gray-lighter">
             <i class="fa-light fa-lg fa-magnifying-glass"></i>
           </a>
         </span>
 
-        <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-lighter">
+        <a href="#" class="d-inline-block no-underline p-4 text-gray-darker border-solid border-l border-gray-lighter">
           <i class="fa-light fa-lg fa-circle-user"></i>
         </a>
       </div>
     </section>
 
-    <section id="navigation-secondary" class="py-2 px-1 py-md-3 bring-forward drop-shadow">
+    <section id="navigation-secondary" class="py-3 px-2 py-md-4 px-md-3 bring-forward drop-shadow">
       <div class="d-flex flex-column flex-md-row justify-content-between align-content-center px-2">
         <h2 class="h6 mb-0 d-flex justify-content-between" style="margin-top: 2px;">About <i class="fa-solid fa-caret-down hidden-md hidden-lg hidden-xl" role="button" data-toggle="collapse" href="#nav-secondary" aria-expanded="false" aria-controls="nav-secondary"></i></h2>
         <div class="collapse in" id="nav-secondary">
