increased gap between subsections for events and new on locations

--- a/locations.html
+++ b/locations.html
@@ -364,7 +364,7 @@
 
       <section id="events" class="bg-gray-lighter">
         <div class="page-constrained mx-auto">
-          <div class="d-grid grid-cols-1 gap-y-7 gap-y-md-8">
+          <div class="d-grid grid-cols-1 gap-y-8">
             <div>
               <p class="pretitle">Events &amp; News</p>
               <h2 class="display-3">What's happening at NewSpring<br /><span class="text-primary">Northeast Columbia</span></h2>
