updated all campus refs to clemson

--- a/locations.html
+++ b/locations.html
@@ -80,7 +80,7 @@
         <div class="page-constrained mx-auto ratio-tall ratio-md-square ratio-lg-video d-flex justify-content-start align-items-end bring-forward text-white">
           <div>
             <h1 class="display-2 font-bold text-white mb-1">NewSpring Church</h1>
-            <p class="lead text-white">of Northeast Columbia, SC</p>
+            <p class="lead text-white">of Clemson, SC</p>
             <p class="d-flex flex-column gap-y-2 flex-sm-row mb-0">
               <a href="#get-involved" data-scroll class="btn btn-primary">Get Involved</a>
               <a href="#staff" data-scroll class="btn btn-default text-white">Get to Know Us</a>
@@ -367,7 +367,7 @@
           <div class="d-grid grid-cols-1 gap-y-8">
             <div>
               <p class="pretitle">Events &amp; News</p>
-              <h2 class="display-3">What's happening at NewSpring<br /><span class="text-primary">Northeast Columbia</span></h2>
+              <h2 class="display-3">What's happening at NewSpring<br /><span class="text-primary">Clemson</span></h2>
               <p class="lead"><a href="#">Sign up for the Need to Know</a> to have these updates delivered right to your inbox.</p>
             </div>
             <div>
@@ -489,7 +489,7 @@
             </div>
             <div>
               <p class="pretitle">Kingdom Mentality</p>
-              <h2 class="display-3">Our local missions partners in<br /><span class="text-primary">Northeast Columbia, SC</span></h2>
+              <h2 class="display-3">Our local missions partners in<br /><span class="text-primary">Clemson, SC</span></h2>
               <div class="d-grid grid-cols-12 gap-3 mb-5 mx-neg-3 mx-sm-0">
                 <div class="col-span-12 col-span-md-6 col-span-lg-4">
                   <div class="card d-block text-decoration-none bg-white text-gray-darker rounded-xl overflow-hidden" data-aos="fade-up">
@@ -544,23 +544,24 @@
       <section id="staff" class="bg-gray-darker text-white text-center text-md-left">
         <div class="page-constrained mx-auto">
           <p class="pretitle">Our Staff</p>
-          <h2 class="display-3 mb-7 mb-md-8">Meet the <span class="text-primary">Northeast Columbia</span> staff</h2>
+          <h2 class="display-3 mb-7 mb-md-8">Meet the <span class="text-primary">Clemson</span> staff</h2>
           <div class="d-grid grid-cols-12 gap-y-7 align-items-lg-center" data-aos="fade-up">
             <div class="col-span-12 col-span-md-4 col-span-lg-3 px-6 px-sm-0">
               <div
                 class="ratio-square bg-primary rounded-full overflow-hidden background-cover background-center border-4 border-solid border-gray"
                 style="
-                  background-image: url('https://s3.amazonaws.com/ns.images/campuses/campus-pastors/CP_Image_NEC.jpg?AWSAccessKeyId=AKIAI6GSVDKZRVEIDFVQ&Expires=1721326988&Signature=A89%2FFD9OsfAjzm8i%2FoKf%2FZavggU%3D');
+                  background-image: url('https://s3.amazonaws.com/ns.images/campuses/campus-pastors/NSC18621%20(1).jpg?AWSAccessKeyId=AKIAI6GSVDKZRVEIDFVQ&Expires=1721336093&Signature=CbriF1NJLu9%2BAxyOFTNiyIZx1xI%3D');
                 "></div>
             </div>
             <div class="col-span-12 col-span-md-8 col-span-lg-9 pl-md-7 pl-lg-8">
-              <h3 class="mb-1">Robbie Green</h3>
+              <h3 class="mb-1">Jon Patterson</h3>
               <p class="lead">Campus Pastor</p>
               <p>
-                Robbie began attending Clemson in 2004 and a few friends invited him to NewSpring. Around that time, he felt the Lord calling him into ministry.
-                Robbie is married to Charlee, and they have two daughters. Robbie joined the NewSpring staff in 2011 and has been the Northeast Columbia Campus
-                Pastor since 2015. He is excited to see Jesus start a movement that changes the community. Robbie and his wife Charlee have four children: three
-                girls and one boy.
+                Jon grew up in the Clemson area and met Jesus at an early age. He went to college in Oklahoma, where he met the love of his life, Cady. After
+                finishing seminary in 2018, Jon and Cady felt called back to the Clemson area, where they got connected to NewSpring Church. In 2020, Jon came
+                on staff as the Discipleship Director for the Clemson Campus. He stepped into the campus pastor role in the fall of 2022. Jon and Cady are
+                thrilled to do ministry in the Clemson area and are eager to see Jesus move in the hearts of the people here. They have one child, Callum, and
+                another on the way!
               </p>
               <p class="mb-0"><a href="https://newspring.cc/staff/campus/northeast-columbia" class="btn btn-primary">See the whole team</a></p>
             </div>
