updated all campus refs to clemson

--- a/locations.html
+++ b/locations.html
@@ -563,7 +563,7 @@
                 thrilled to do ministry in the Clemson area and are eager to see Jesus move in the hearts of the people here. They have one child, Callum, and
                 another on the way!
               </p>
-              <p class="mb-0"><a href="https://newspring.cc/staff/campus/northeast-columbia" class="btn btn-primary">See the whole team</a></p>
+              <p class="mb-0"><a href="https://newspring.cc/staff/campus/clemson" class="btn btn-primary">See the whole team</a></p>
             </div>
           </div>
         </div>
