--- a/locations-item.html
+++ b/locations-item.html
@@ -95,7 +95,7 @@
           <div class="col-span-6 col-span-md-6 col-span-lg-2 px-4 px-md-0" data-aos="fade-up">
             <div class="d-grid grid-cols-1 gap-y-2">
               <h2 class="h3">Campus<br />Information</h2>
-              <div class="d-flex align-items-center mb-3">
+              <div class="d-flex align-items-center mb-4">
                 <i class="fa-light fa-fw fa-lg mr-3 fa-location-dot height-max-content"></i>
                 <p class="height-max-content mb-0">
                   <a href="#"
@@ -104,27 +104,44 @@
                   >
                 </p>
               </div>
-              <div class="d-flex align-items-center mb-3">
+              <div class="d-flex align-items-center mb-4">
                 <i class="fa-light fa-fw fa-lg mr-3 fa-phone height-max-content"></i>
                 <p class="height-max-content mb-0"><a href="#">(864) 986-6111</a></p>
               </div>
 
-              <div class="d-flex align-items-center mb-3">
+              <div class="d-flex align-items-center mb-4">
                 <i class="fa-light fa-fw fa-lg mr-3 fa-envelope height-max-content"></i>
                 <p class="height-max-content mb-0"><a href="#">clemson@newspring.cc</a></p>
               </div>
 
-              <div class="d-flex align-items-center">
+              <div class="d-flex align-items-center mb-5">
                 <i class="fa-light fa-fw fa-lg mr-3 fa-clock height-max-content"></i>
                 <div class="height-max-content">
                   <p class="mb-0">Sundays at 9:15 and 11:15am</p>
                 </div>
               </div>
 
-              <div class="hidden d-flex align-items-center">
-                <i class="fa-light fa-fw fa-lg mr-3 fa-clock height-max-content"></i>
-                <div class="height-max-content">
-                  <p class="mb-0">Students gather every Wednesday – doors open at 6:15pm, pick up students by 8:30pm</p>
+              <div>
+                <h2 class="h4">Student<br />Gatherings</h2>
+
+                <div class="d-flex align-items-center mb-4">
+                  <i class="fa-light fa-fw fa-lg mr-3 fa-clock height-max-content"></i>
+                  <div class="height-max-content">
+                    <p class="mb-0">Every Wednesday at 7pm – doors open at 6:15pm, pick up students by 8:30pm</p>
+                  </div>
+                </div>
+
+                <div class="d-flex align-items-center mb-4">
+                  <i class="fa-light fa-fw fa-lg mr-3 fa-location-dot height-max-content"></i>
+                  <p class="height-max-content mb-0">
+                    <a href="#">Get Directions</a>
+                  </p>
+                </div>
+                <div class="d-flex align-items-center mb-4">
+                  <i class="fa-light fa-fw fa-lg mr-3 fa-link height-max-content"></i>
+                  <p class="height-max-content mb-0">
+                    <a href="/fuse.html">newspring.cc/fuse</a>
+                  </p>
                 </div>
               </div>
             </div>
