made nav fixed for locations item page

--- a/locations-item.html
+++ b/locations-item.html
@@ -39,7 +39,9 @@
     <link rel="stylesheet" href="./Themes/new/Styles/gauntlet.css" />
   </head>
   <body>
-    <section class="p-0 w-100 bg-white d-grid grid-cols-2 justify-content-between align-content-center drop-shadow">
+    <section
+      class="position-fixed bring-forward p-0 w-100 bg-white d-grid grid-cols-2 justify-content-between align-content-center shadow-md"
+      style="z-index: 100">
       <div class="d-grid align-content-center">
         <a href="/" class="px-4 mb-0">
           <img src="./Themes/new/Assets/SVG/logo.svg" alt="NewSpring Church Logo" style="width: 160px; max-width: 160px" />
