added vision section to locations item

--- a/locations-item.html
+++ b/locations-item.html
@@ -39,9 +39,7 @@
     <link rel="stylesheet" href="./Themes/new/Styles/gauntlet.css" />
   </head>
   <body>
-    <section
-      class="position-fixed bring-forward p-0 w-100 bg-white d-grid grid-cols-2 justify-content-between align-content-center shadow-md"
-      style="z-index: 100">
+    <section class="bring-forward p-0 w-100 bg-white d-grid grid-cols-2 justify-content-between align-content-center shadow-md" style="z-index: 100">
       <div class="d-grid align-content-center">
         <a href="/" class="px-4 mb-0">
           <img src="./Themes/new/Assets/SVG/logo.svg" alt="NewSpring Church Logo" style="width: 160px; max-width: 160px" />
@@ -312,6 +310,14 @@
               <a href="#" class="btn btn-primary">See News &amp; Events</a>
             </p>
           </div>
+        </div>
+      </section>
+
+      <section class="bg-gray-darker text-white">
+        <div class="text-constrained mx-auto text-center">
+          <p class="pretitle">Our Vision</p>
+          <h3 class="display-3">We want everyone everywhere to have an everyday relationship with Jesus.</h3>
+          <p class="mb-0"><a href="/about.html" class="btn btn-primary">Learn More</a></p>
         </div>
       </section>
 
