updated cta copy for locations item

--- a/locations-item.html
+++ b/locations-item.html
@@ -117,7 +117,7 @@
               <div class="d-flex align-items-center mb-5">
                 <i class="fa-light fa-fw fa-lg mr-3 fa-clock height-max-content"></i>
                 <div class="height-max-content">
-                  <p class="mb-0">Sundays at 9:15 and 11:15am</p>
+                  <p class="mb-0">Sundays at 9:15am and 11:15am</p>
                 </div>
               </div>
 
@@ -344,7 +344,7 @@
               most appropriate for them.
             </p>
             <p class="mb-0 d-flex flex-column flex-sm-row gap-y-1 gap-x-1 gap-y-sm-0" data-aos="fade-up">
-              <a href="/kidspring" target="_blank" class="btn btn-primary drop-shadow">Learn more</a>
+              <a href="/kidspring" target="_blank" class="btn btn-primary drop-shadow">Learn More</a>
               <script src="https://fast.wistia.com/embed/medias/95f95oa7pr.jsonp" async></script>
               <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
               <span class="wistia_embed wistia_async_95f95oa7pr popover=true popoverContent=link" style="position: relative"
@@ -375,7 +375,7 @@
               into a lifetime of following Jesus. We believe the next generation of the church will change the world!
             </p>
             <p class="mb-0 d-flex flex-column flex-sm-row gap-y-1 gap-x-1 gap-y-sm-0" data-aos="fade-up">
-              <a href="/fuse" target="_blank" class="btn btn-primary drop-shadow">Learn more</a>
+              <a href="/fuse" target="_blank" class="btn btn-primary drop-shadow">Learn More</a>
               <script src="https://fast.wistia.com/embed/medias/yhti78hou3.jsonp" async></script>
               <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
               <span class="wistia_embed wistia_async_yhti78hou3 popover=true popoverContent=link" style="display: inline; position: relative"
@@ -454,7 +454,7 @@
                   </a>
                 </div>
               </div>
-              <p class="text-center"><a href="#" class="btn btn-primary">See all Events</a></p>
+              <p class="text-center"><a href="#" class="btn btn-primary">See All Events</a></p>
             </div>
 
             <div>
@@ -510,7 +510,7 @@
                 </div>
                 <div class="col-span-12 col-span-md-6 col-span-lg-4"></div>
               </div>
-              <p class="text-center"><a href="#" class="btn btn-primary">See all News</a></p>
+              <p class="text-center"><a href="#" class="btn btn-primary">See All News</a></p>
             </div>
             <div>
               <p class="pretitle">Kingdom Mentality</p>
@@ -560,7 +560,7 @@
                 </div>
                 <div class="col-span-12 col-span-md-6 col-span-lg-4"></div>
               </div>
-              <p class="text-center"><a href="#" class="btn btn-primary">Explore all Partners</a></p>
+              <p class="text-center"><a href="#" class="btn btn-primary">See All Partners</a></p>
             </div>
           </div>
         </div>
@@ -588,7 +588,7 @@
                 thrilled to do ministry in the Clemson area and are eager to see Jesus move in the hearts of the people here. They have one child, Callum, and
                 another on the way!
               </p>
-              <p class="mb-0"><a href="https://newspring.cc/staff/campus/clemson" class="btn btn-primary">See the whole team</a></p>
+              <p class="mb-0"><a href="https://newspring.cc/staff/campus/clemson" class="btn btn-primary">See the Whole Team</a></p>
             </div>
           </div>
         </div>
