--- a/locations-item.html
+++ b/locations-item.html
@@ -123,7 +123,12 @@
 
               <div>
                 <h2 class="h4">Student<br />Gatherings</h2>
-
+                <div class="d-flex align-items-center mb-4">
+                  <i class="fa-light fa-fw fa-lg mr-3 fa-circle-info height-max-content"></i>
+                  <div class="height-max-content">
+                    <p class="mb-0">For 6th-12th graders</p>
+                  </div>
+                </div>
                 <div class="d-flex align-items-center mb-4">
                   <i class="fa-light fa-fw fa-lg mr-3 fa-clock height-max-content"></i>
                   <div class="height-max-content">
