added hero image to 2030

--- a/2030.html
+++ b/2030.html
@@ -88,13 +88,13 @@
 }
       </style>
 
-      <section class="text-white position-relative d-flex justify-content-center align-content-center flex-wrap text-center px-md-9 vh-100" style="background-color: rgb(180,90,80);">
+      <section class="ratio-landscape position-relative d-flex justify-content-center align-content-center flex-wrap text-center px-md-9" style="background-color: rgb(180,90,80);">
         <div
-          class="fullscreen background-cover background-center o-70"
-          style="background-image: url('https://images.unsplash.com/photo-1546874177-9e664107314e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2369&q=100')"></div>
-        <div class="fullscreen o-90" style="background: rgb(0,0,0);
+          class="fullscreen background-cover background-center o-100"
+          style="background-image: url('/Themes/new/Assets/Images/2030_hero_2x1.jpg')"></div>
+        <div class="fullscreen o-50" style="background: rgb(0,0,0);
   background: linear-gradient(180deg, rgba(0,0,0,0) 20%, rgba(0,0,0,1) 80%);"></div>
-        <div class="bring-forward page-constrained height-max-content">
+        <div class="bring-forward page-constrained height-max-content hidden">
           <h1 class="display-3">We want to see everyone everywhere in an everyday relationship with Jesus.</h1>
           <p class="lead text-white">In 2020, our leadership team prayed and sought the Lord for the future of NewSpring Church. We believe He made three things abundantly clear. We’re calling these goals “Vision 2030.”</p>          </p>
           <p class="mb-0"><a href="#debt" data-scroll class="btn btn-primary drop-shadow">Learn More</a></p>
