--- a/locations-item.html
+++ b/locations-item.html
@@ -77,7 +77,8 @@
           "></div>
         <div class="fullscreen o-100" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 1) 100%)"></div>
 
-        <div class="page-constrained mx-auto ratio-tall ratio-md-square ratio-lg-video d-flex justify-content-start align-items-end bring-forward text-white">
+        <div
+          class="page-constrained mx-auto ratio-tall ratio-md-square ratio-lg-landscape d-flex justify-content-start align-items-end bring-forward text-white">
           <div>
             <h1 class="display-2 font-bold text-white mb-1">NewSpring Church</h1>
             <p class="lead text-white">of Clemson, SC</p>
