--- a/locations.html
+++ b/locations.html
@@ -70,7 +70,8 @@
 
     <div id="content">
       <!-- Hero -->
-      <section class="ratio-tall ratio-md-square ratio-lg-video d-flex align-items-end position-relative bg-black overflow-hidden pb-7 pb-md-8">
+      <section
+        class="ratio-tall ratio-md-square ratio-lg-video ratio-xl-landscape d-flex align-items-end position-relative bg-black overflow-hidden pb-7 pb-md-8">
         <video
           class="d-block fullscreen w-100"
           style="object-fit: cover; min-width: 100%; min-height: 100%; height: 120%; opacity: 0.8"
@@ -85,29 +86,161 @@
             type="video/mp4" />
         </video>
 
-        <div class="fullscreen o-80" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 1) 100%)"></div>
+        <div class="fullscreen o-80" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 1) 100%)"></div>
 
         <div class="text-constrained mx-auto bring-forward text-white text-center">
           <div>
-            <h1 class="display-3 font-bold text-white mb-1">Find a Location</h1>
+            <h1 class="h1 font-bold text-white mb-1">Find a Location</h1>
             <p>NewSpring is one church with 14 campuses across South Carolina. Join us online or in-person, whichever works best for your family.</p>
-            <p class="mb-0">
-              <a href="#get-involved" data-scroll class="btn btn-primary">Find a Location</a>
+            <p class="d-flex flex-column flex-sm-row justify-content-center gap-3 mb-0">
+              <input type="text" placeholder="Enter your Location" class="text-gray-darker rounded-full border-0 py-3 px-4 text-center" />
+              <a href="#get-involved" data-scroll class="btn btn-primary py-3 px-5">Find a Location</a>
             </p>
           </div>
         </div>
       </section>
 
-      <section class="bg-white">
-        <div class="page-constrained mx-auto d-grid grid-cols-1 grid-cols-sm-2 grid-cols-lg-3">
-          <div>
-            <h3>Aiken, SC</h3>
-          </div>
-          <div>
-            <h3>Anderson, SC</h3>
-          </div>
-          <div>
-            <h3>Clemson, SC</h3>
+      <section class="bg-gray-lighter px-5 p-md-7 py-lg-8">
+        <div class="page-constrained mx-auto">
+          <div class="d-grid grid-cols-1 grid-cols-md-2 grid-cols-lg-3 gap-3 mx-neg-3 mx-sm-0">
+            <div>
+              <div class="card d-block text-decoration-none bg-white text-gray-darker rounded-xl overflow-hidden" data-aos="fade-up">
+                <a
+                  href="#"
+                  class="position-relative d-block ratio-landscape p-4 p-lg-5 o-100"
+                  style="
+                    background-image: url('https://images.unsplash.com/photo-1470229722913-7c0e2dbbafd3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2970&q=80');
+                    background-size: cover;
+                  ">
+                  <div
+                    class="position-absolute label label-default border-3 border-white border-solid rounded-full font-sans px-2 p-1 bg-gray"
+                    style="bottom: -12px">
+                    Location
+                  </div>
+                </a>
+
+                <div class="p-4 p-lg-5 bring-forward">
+                  <h3 class="h5"><a href="#">Aiken, SC</a></h3>
+                  <p><a href="#">Get Directions</a></p>
+                  <p class="mb-0"><a href="#" class="btn btn-sm btn-primary">Location Details</a></p>
+                </div>
+              </div>
+            </div>
+            <div>
+              <div class="card d-block text-decoration-none bg-white text-gray-darker rounded-xl overflow-hidden" data-aos="fade-up">
+                <a
+                  href="#"
+                  class="position-relative d-block ratio-landscape p-4 p-lg-5 o-100"
+                  style="
+                    background-image: url('https://images.unsplash.com/photo-1470229722913-7c0e2dbbafd3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2970&q=80');
+                    background-size: cover;
+                  ">
+                  <div
+                    class="position-absolute label label-default border-3 border-white border-solid rounded-full font-sans px-2 p-1 bg-gray"
+                    style="bottom: -12px">
+                    Location
+                  </div>
+                </a>
+
+                <div class="p-4 p-lg-5 bring-forward">
+                  <h3 class="h5"><a href="#">Anderson, SC</a></h3>
+                  <p><a href="#">Get Directions</a></p>
+                  <p class="mb-0"><a href="#" class="btn btn-sm btn-primary">Location Details</a></p>
+                </div>
+              </div>
+            </div>
+            <div>
+              <div class="card d-block text-decoration-none bg-white text-gray-darker rounded-xl overflow-hidden" data-aos="fade-up">
+                <a
+                  href="#"
+                  class="position-relative d-block ratio-landscape p-4 p-lg-5 o-100"
+                  style="
+                    background-image: url('https://images.unsplash.com/photo-1470229722913-7c0e2dbbafd3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2970&q=80');
+                    background-size: cover;
+                  ">
+                  <div
+                    class="position-absolute label label-default border-3 border-white border-solid rounded-full font-sans px-2 p-1 bg-gray"
+                    style="bottom: -12px">
+                    Location
+                  </div>
+                </a>
+
+                <div class="p-4 p-lg-5 bring-forward">
+                  <h3 class="h5"><a href="#">Clemson, SC</a></h3>
+                  <p><a href="#">Get Directions</a></p>
+                  <p class="mb-0"><a href="#" class="btn btn-sm btn-primary">Location Details</a></p>
+                </div>
+              </div>
+            </div>
+            <div>
+              <div class="card d-block text-decoration-none bg-white text-gray-darker rounded-xl overflow-hidden" data-aos="fade-up">
+                <a
+                  href="#"
+                  class="position-relative d-block ratio-landscape p-4 p-lg-5 o-100"
+                  style="
+                    background-image: url('https://images.unsplash.com/photo-1470229722913-7c0e2dbbafd3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2970&q=80');
+                    background-size: cover;
+                  ">
+                  <div
+                    class="position-absolute label label-default border-3 border-white border-solid rounded-full font-sans px-2 p-1 bg-gray"
+                    style="bottom: -12px">
+                    Location
+                  </div>
+                </a>
+
+                <div class="p-4 p-lg-5 bring-forward">
+                  <h3 class="h5"><a href="#">Aiken, SC</a></h3>
+                  <p><a href="#">Get Directions</a></p>
+                  <p class="mb-0"><a href="#" class="btn btn-sm btn-primary">Location Details</a></p>
+                </div>
+              </div>
+            </div>
+            <div>
+              <div class="card d-block text-decoration-none bg-white text-gray-darker rounded-xl overflow-hidden" data-aos="fade-up">
+                <a
+                  href="#"
+                  class="position-relative d-block ratio-landscape p-4 p-lg-5 o-100"
+                  style="
+                    background-image: url('https://images.unsplash.com/photo-1470229722913-7c0e2dbbafd3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2970&q=80');
+                    background-size: cover;
+                  ">
+                  <div
+                    class="position-absolute label label-default border-3 border-white border-solid rounded-full font-sans px-2 p-1 bg-gray"
+                    style="bottom: -12px">
+                    Location
+                  </div>
+                </a>
+
+                <div class="p-4 p-lg-5 bring-forward">
+                  <h3 class="h5"><a href="#">Anderson, SC</a></h3>
+                  <p><a href="#">Get Directions</a></p>
+                  <p class="mb-0"><a href="#" class="btn btn-sm btn-primary">Location Details</a></p>
+                </div>
+              </div>
+            </div>
+            <div>
+              <div class="card d-block text-decoration-none bg-white text-gray-darker rounded-xl overflow-hidden" data-aos="fade-up">
+                <a
+                  href="#"
+                  class="position-relative d-block ratio-landscape p-4 p-lg-5 o-100"
+                  style="
+                    background-image: url('https://images.unsplash.com/photo-1470229722913-7c0e2dbbafd3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2970&q=80');
+                    background-size: cover;
+                  ">
+                  <div
+                    class="position-absolute label label-default border-3 border-white border-solid rounded-full font-sans px-2 p-1 bg-gray"
+                    style="bottom: -12px">
+                    Location
+                  </div>
+                </a>
+
+                <div class="p-4 p-lg-5 bring-forward">
+                  <h3 class="h5"><a href="#">Clemson, SC</a></h3>
+                  <p><a href="#">Get Directions</a></p>
+                  <p class="mb-0"><a href="#" class="btn btn-sm btn-primary">Location Details</a></p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
