updates to locations and vision 2030 pages

--- a/locations.html
+++ b/locations.html
@@ -70,8 +70,7 @@
 
     <div id="content">
       <!-- Hero -->
-      <section
-        class="ratio-tall ratio-md-square ratio-lg-video ratio-xl-landscape d-flex align-items-end position-relative bg-black overflow-hidden pb-7 pb-md-8">
+      <section class="ratio-tall ratio-md-square ratio-lg-video ratio-xl-thin d-flex align-items-end position-relative bg-black overflow-hidden p-0">
         <video
           class="d-block fullscreen w-100"
           style="object-fit: cover; min-width: 100%; min-height: 100%; height: 120%; opacity: 0.8"
@@ -88,23 +87,26 @@
 
         <div class="fullscreen o-80" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 1) 100%)"></div>
 
-        <div class="text-constrained mx-auto bring-forward text-white text-center">
+        <div class="text-constrained mx-auto bring-forward text-white text-center px-5 pb-7 pb-md-8">
           <div>
             <h1 class="h1 font-bold text-white mb-1">Find a Location</h1>
             <p>NewSpring is one church with 14 campuses across South Carolina. Join us online or in-person, whichever works best for your family.</p>
             <p class="d-flex flex-column flex-sm-row justify-content-center gap-3 mb-0">
-              <input type="text" placeholder="Enter your Location" class="text-gray-darker rounded-full border-0 py-3 px-4 text-center" />
+              <input
+                type="text"
+                placeholder="Enter your Location"
+                class="font-sans font-medium tracking-tight text-gray-darker rounded-full border-0 py-3 px-4 text-center" />
               <a href="#get-involved" data-scroll class="btn btn-primary py-3 px-5">Find a Location</a>
             </p>
           </div>
         </div>
       </section>
 
-      <section class="bg-gray-lighter px-5 p-md-7 py-lg-8">
+      <section class="bg-gray-lighter p-5 p-md-7 px-xl-0">
         <div class="page-constrained mx-auto">
           <div class="d-grid grid-cols-1 grid-cols-md-2 grid-cols-lg-3 gap-3 mx-neg-3 mx-sm-0">
             <div>
-              <div class="card d-block text-decoration-none bg-white text-gray-darker rounded-xl overflow-hidden" data-aos="fade-up">
+              <div class="card d-block text-decoration-none bg-white text-gray-darker rounded-lg overflow-hidden" data-aos="fade-up">
                 <a
                   href="#"
                   class="position-relative d-block ratio-landscape p-4 p-lg-5 o-100"
@@ -127,7 +129,7 @@
               </div>
             </div>
             <div>
-              <div class="card d-block text-decoration-none bg-white text-gray-darker rounded-xl overflow-hidden" data-aos="fade-up">
+              <div class="card d-block text-decoration-none bg-white text-gray-darker rounded-lg overflow-hidden" data-aos="fade-up">
                 <a
                   href="#"
                   class="position-relative d-block ratio-landscape p-4 p-lg-5 o-100"
@@ -150,7 +152,7 @@
               </div>
             </div>
             <div>
-              <div class="card d-block text-decoration-none bg-white text-gray-darker rounded-xl overflow-hidden" data-aos="fade-up">
+              <div class="card d-block text-decoration-none bg-white text-gray-darker rounded-lg overflow-hidden" data-aos="fade-up">
                 <a
                   href="#"
                   class="position-relative d-block ratio-landscape p-4 p-lg-5 o-100"
@@ -173,7 +175,7 @@
               </div>
             </div>
             <div>
-              <div class="card d-block text-decoration-none bg-white text-gray-darker rounded-xl overflow-hidden" data-aos="fade-up">
+              <div class="card d-block text-decoration-none bg-white text-gray-darker rounded-lg overflow-hidden" data-aos="fade-up">
                 <a
                   href="#"
                   class="position-relative d-block ratio-landscape p-4 p-lg-5 o-100"
@@ -196,7 +198,7 @@
               </div>
             </div>
             <div>
-              <div class="card d-block text-decoration-none bg-white text-gray-darker rounded-xl overflow-hidden" data-aos="fade-up">
+              <div class="card d-block text-decoration-none bg-white text-gray-darker rounded-lg overflow-hidden" data-aos="fade-up">
                 <a
                   href="#"
                   class="position-relative d-block ratio-landscape p-4 p-lg-5 o-100"
@@ -219,7 +221,7 @@
               </div>
             </div>
             <div>
-              <div class="card d-block text-decoration-none bg-white text-gray-darker rounded-xl overflow-hidden" data-aos="fade-up">
+              <div class="card d-block text-decoration-none bg-white text-gray-darker rounded-lg overflow-hidden" data-aos="fade-up">
                 <a
                   href="#"
                   class="position-relative d-block ratio-landscape p-4 p-lg-5 o-100"
